# Fftw_extra

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.cmake  makefile  makefile_deprecated  uninstall.cmake.in
benchmark/1600X/: basic_advanced.csv  basic_vs_advanced.csv
includes/: fftw_extra.h  fftw_extra_py.h
src/: fftw_extra.cpp  fftw_extra.h  fftw_extra_py.cpp  fftw_extra_py.h  python_submodule.cpp  python_submodule.h
